crates/atlas-runtime/tests/snapshots/frontend_syntax__negation.snap
---
source: crates/atlas-runtime/tests/frontend_syntax.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Unary:
            op: Negate
            expr:
              Literal:
                - Number: 5
                - start: 1
                  end: 2
            span:
              start: 0
              end: 2
        span:
          start: 0
          end: 3
