crates/atlas-runtime/tests/snapshots/frontend_syntax__null_literal.snap
---
source: crates/atlas-runtime/tests/frontend_syntax.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Literal:
            - "Null"
            - start: 0
              end: 4
        span:
          start: 0
          end: 5
