crates/atlas-runtime/tests/snapshots/frontend_syntax__number_literal.snap
---
source: crates/atlas-runtime/tests/frontend_syntax.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Literal:
            - Number: 42
            - start: 0
              end: 2
        span:
          start: 0
          end: 3
